--- a/templates/join.html
+++ b/templates/join.html
@@ -37,6 +37,7 @@
         var audioMuted = "{{mute_audio}}" == "1";
         var videoMuted = "{{mute_video}}" == "1";
         console.log(">> {{mute_audio}}, {{mute_video}}", audioMuted, videoMuted);
+        console.log(myName,myRoomID);
     </script>
 
     <meta charset="UTF-8">
